# 2018-11-09-bf-eleicoes-2018

./: .gitignore  Makefile  README.rst  docker-compose.yml  pyproject.toml  tables.py
maps/: br_municipios.topo.json
scripts/: __main__.py  util.py
