[tool.poetry]
name = "2018-11-09-bf-eleicoes-2018"
version = "0.1.0"
description = ""
authors = [ "Beta Faccion <betafcc@gmail.com>" ]

[tool.poetry.dependencies]
python = "^3.7"
tornado = "<5"
ipython = "^7.1"
jupyterlab = "^0.35.3"
numpy = "^1.15"
pandas = "^0.23.4"
matplotlib = "^3.0"
altair = "^2.2"
folium = "^0.6.0"
sqlalchemy = "^1.2"
tqdm = "^4.28"

[tool.poetry.dev-dependencies]
pytest = "^3.9"
flake8 = "^3.6"
mypy = "^0.641.0"

[tool.pandora]
name = "Eleições 2018"
date = 2018-11-09T06:20:44.989Z

[build-system]
requires = [ "poetry>=0.12" ]
build-backend = "poetry.masonry.api"
